<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
	<string name="back">Back</string>
	<string name="next">Next</string>
	<string name="done">Done</string>
	<string name="quit">Quit</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="open">Open</string>
	<string name="email_address">Email address</string>
	<string name="password">Password</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="refresh">Refresh</string>
	<string name="about">About</string>
	<string name="unknown">Unknown</string>
	<string name="when_never">Never</string>
	<string name="when_5min">5 minutes</string>
	<string name="when_15min">15 minutes</string>
	<string name="when_30min">30 minutes</string>
	<string name="when_1hour">1 hour</string>
	<string name="when_2hours">2 hours</string>
	<string name="when_4hours">4 hours</string>
	<string name="general_settings">General settings</string>
	<string name="account_settings">Account settings</string>
	<string name="account_settings_f">%1$s account settings</string>
	<string name="login_settings">Login settings</string>
	<string name="set_account_credentials">Set account username and password</string>
	<string name="notification_settings">Notification settings</string>
	<string name="select_ringtone">Select ringtone</string>
	<string name="account_email_already_exists">An account with this email address already exists</string>
	<string name="changes_saved">Changes saved.</string>
	<string name="account_created">Account created.</string>
	<string name="connecting">Connecting&#8230;</string>
	<string name="connection_error">Account verification error</string>
	<string name="connection_error_f">Account verification error: %1$s</string>
	<string name="connection_successful">Connection successful!</string>
	<string name="select_account">Select account</string>
	<string name="no_accounts">No accounts have been set up.\n\nTo set up an account now, press <b>Menu</b> and select <b>Add account</b>.</string>
	<string name="new_account">New account</string>
	<string name="add_a_new_account">Add a new account</string>
	<string name="account_options">Account options</string>
	<string name="erase_account_data">Erase all account data from this device? This action cannot be undone.</string>
	<string name="add_account">Add account</string>
	<string name="edit_account">Edit account</string>
	<string name="type_your_credentials_f">Type your %1$s email address and password:</string>
	<string name="error_invalid_credentials_f">Incorrect email address or password for %1$s</string>
	<string name="error_invalid_credentials">Incorrect email address or password</string>
	<string name="error_unexpected">An unexpected error has occurred</string>
	<string name="error_unexpected_f">Unexpected error: %1$s</string>
	<string name="error_timed_out">Server is taking too long to respond</string>
	<string name="error_json_parser_error">Unexpected response from server - please try again later</string>
	<string name="error_network_error">Network error - please check your Internet connection</string>
	<string name="error_dns_error">Name resolution error - please check your Internet connection</string>
	<string name="error_account_corrupted">Your login settings are corrupted. Please check your login settings and try again</string>
	<string name="notify_message_pending_f">%1$s has an unread message from %2$s</string>
	<string name="notify_messages_pending_f">%1$s has %2$d unread messages on %3$s</string>
	<string name="notify_friend_online_f">%1$s is now online on %2$s</string>
	<string name="notify_friends_online_f">%1$s has friends online on %3$s</string>
	<string name="license_error">License error</string>
	<string name="try_again">Try again</string>
	<string name="visit_market">Market</string>
	<string name="validating_license">Verifying license&#8230;</string>
	<string name="invalid_license">Unable to validate license. Please try again shortly.</string>
	<string name="license_validation_error">License validation error. Please try again later.</string>
	<string name="widget_could_not_be_added">Widget could not be added.</string>
	<string name="friend_online">Friend online</string>
	<string name="new_messages">New messages</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="account_edit_error">Unable to edit account. Please make sure you have the most up-to-date version of the software.</string>
    <string name="account_delete_error">Unable to delete account. Please make sure you have the most up-to-date version of the software.</string>
    <string name="delete_account">Delete Account</string>
    <string name="create_new_account_f">Add a new %1$s account</string>
    <string name="select_account_type">Select account type</string>
    <string name="xbox_live_missing">Install Spark 360 to enable Xbox Live support</string>
    <string name="psn_missing">Install Spark Trophies to enable PSN support</string>
    <string name="unavailable">(unavailable)</string>
    <string name="cannot_open_market">Error opening Android Market</string>
    <string name="cannot_open_f">Error opening application. Is it installed?</string>
    <string name="xbox_live_locale">en-US</string>
    <string name="app_name">Spark 360</string>
	<string name="app_version_format">version %1$s</string>
	<string name="app_by">2010&#8211;2012 Akop Karapetyan</string>
	<string name="app_website">http://www.spark360app.com/</string>
	<string name="app_ownership">This application is not produced, endorsed, or affiliated with the Microsoft Corporation.\n\nMicrosoft, Xbox, Xbox Live, and the Xbox logos are trademarks of Microsoft Corporation.\n\nThis application is not produced, endorsed, or affiliated with the Sony Computer Entertainment, or Sony Corporation.\n\nPLAYSTATION, PlayStation, and PSN, are trademarks or registered trademarks of Sony Computer Entertainment Inc.</string>
	<string name="error_friends_not_found">List of friends appears invalid. Please refresh.</string>
	<string name="online">Online</string>
	<string name="offline">Offline</string>
	<string name="away">Away</string>
    <string name="pending">Pending</string>
    <string name="other">Other</string>
	<string name="account_summary">Account summary</string>
	<string name="game_history">Game History</string>
	<string name="game_history_of_f">%1$s\'s game history</string>
	<string name="friends_of_f">%1$s\'s friends</string>
	<string name="messages_of_f">%1$s\'s messages</string>
	<string name="select_recipients">Select recipients</string>
	<string name="messages_from_f">Messages From %1$s</string>
	<string name="comparing_achieves_with_f">Comparing %1$s achievements with %2$s (%3$s)</string>
	<string name="ms_point_utility">Microsoft Point utility</string>
	<string name="from_colon">From:</string>
	<string name="friends_online_f">%1$s online</string>
	<string name="messages_unread_f">%1$s unread</string>
	<string name="none_online">None online</string>
	<string name="none_unread">None unread</string>
	<string name="tools">Tools</string>
	<string name="toggle_all">Toggle all</string>
	<string name="gamertag">Gamertag</string>
	<string name="name">Name</string>
	<string name="location">Location</string>
	<string name="bio">Bio</string>
	<string name="recent_activity">Recent activity</string>
	<string name="zone">Zone</string>
	<string name="motto">Motto</string>
	<string name="reply">Reply</string>
	<string name="friends">Friends</string>
	<string name="messages">Messages</string>
	<string name="compose">Compose</string>
	<string name="send">Send</string>
	<string name="achievement_help">Achievement help</string>
	<string name="visit_webpage">Visit web page</string>
	<string name="compare_games">Compare games</string>
	<string name="compare_achievements">Compare achievements</string>
	<string name="played_last">%1$s played last</string>
	<string name="loading_game_history">Loading game history&#8230;</string>
	<string name="xbox_live">Xbox Live</string>
	<string name="rep">Rep</string>
	<string name="points_balance">Points Balance</string>
	<string name="vibrate">Vibrate</string>
	<string name="vibrate_summary">Also vibrate on new notifications</string>
	<string name="games_played_u">Games Played</string>
	<string name="games_played">Games played</string>
	<string name="my_played_games">My Played Games</string>
	<string name="my_friends">My Friends</string>
	<string name="my_messages">My Messages</string>
	<string name="my_profile">My Profile</string>
	<string name="friend_profile">Friend Profile</string>
	<string name="compose_message_u">Compose Message</string>
	<string name="compose_message">Compose message</string>
	<string name="games_played_f">%1$s games played</string>
	<string name="gamerscore_x_of_x_f">%1$,d/%2$,d gamerscore</string>
	<string name="achieves_unlocked_x_of_x_f">%1$s/%2$s achievements unlocked</string>
	<string name="achieves_x_of_x_f">%1$,d/%2$,d achievements</string>
	<string name="friends_online_as_of_f">%1$s of %2$s friends online (as of %3$s)</string>
	<string name="no_achievements">No achievements</string>
	<string name="game_history_empty">Your game history is empty.</string>
	<string name="no_games_to_compare">No games to compare.</string>
	<string name="comparing_games">Comparing games&#8230;</string>
	<string name="game_has_no_achieves">This game has no achievements.</string>
	<string name="updating_achieves">Updating achievements&#8230;</string>
	<string name="comparing_achieves">Comparing achievements&#8230;</string>
	<string name="last_played">Last played</string>
	<string name="last_played_f">Last played %1$s</string>
	<string name="processing_request">Processing request&#8230;</string>
	<string name="x_f">%1$,d</string>
	<string name="x_of_x_f">%1$s/%2$s</string>
	<string name="x_of_x_sep_f">%1$,d/%2$,d</string>
	<string name="gamerscore">Gamerscore</string>
	<string name="add_friend">Add friend</string>
	<string name="acquired_f">Unlocked %1$s</string>
	<string name="acquired_offline">Unlocked</string>
	<string name="locked">Locked</string>
	<string name="achievements_of_f">%1$s Achievements</string>
	<string name="achievements_unlocked">Achievements unlocked</string>
	<string name="gamerscore_unlocked">Gamerscore unlocked</string>
	<string name="google_achievements_f">\"%1$s\" achievement guide</string>
	<string name="google_achievement_f">\"%1$s\" \"%2$s\" achievement help</string>
	<string name="percent_achieves_unlocked_f">%1$d%% of achievements unlocked</string>
	<string name="x_achieves_x_percent_unlocked">%1$d achievements, %2$d%% unlocked</string>
	<string name="no_games_played">No games played</string>
	<string name="remove_from_friends">Remove from friends</string>
	<string name="accept_friend_request">Accept friend request</string>
	<string name="decline_friend_request">Decline friend request</string>
	<string name="cancel_friend_request">Cancel friend request</string>
	<string name="search_friends">Search friends</string>
	<string name="update_frequency">Update frequency</string>
	<string name="friend_notifications">Friend notifications</string>
	<string name="send_friend_request">Send friend request</string>
	<string name="view_friends">View friends</string>
	<string name="mark_as_read">Mark as read</string>
	<string name="message_warning">Please note that Xbox Live may temporarily limit your ability to send messages from Spark 360 if you send a large number of them, or send them to a large number of recipients.</string>
    <string name="view_xbl_profile">View Xbox Live profile</string>
	<string name="psn_friends">PSN friends</string>
    <string name="account_region">Account region</string>
	<string name="primary_server">Primary data server</string>
    <string name="your_locale">Your locale</string>
    <string name="select_locale">Select locale</string>
</resources>