<?xml version="1.0" encoding="utf-8"?>
<!--  
 - menu/xbl_message_list_context.xml
 - Copyright (C) 2010-2012 Akop Karapetyan
 -
 - This file is part of Spark 360, the online gaming service client. 
 -
 -  This program is free software; you can redistribute it and/or modify
 -  it under the terms of the GNU General Public License as published by
 -  the Free Software Foundation; either version 2 of the License, or
 -  (at your option) any later version.
 -
 -  This program is distributed in the hope that it will be useful,
 -  but WITHOUT ANY WARRANTY; without even the implied warranty of
 -  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 -  GNU General Public License for more details.
 -
 -  You should have received a copy of the GNU General Public License
 -  along with this program; if not, write to the Free Software
 -  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 -  02111-1307  USA.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/menu_group_gold_required">
		<item
			android:id="@+id/menu_reply" 
			android:title="@string/reply"
		/>
	</group>
	<group android:id="@+id/menu_group_unread">
		<item
			android:id="@+id/menu_mark_as_read" 
			android:title="@string/mark_as_read"
		/>
	</group>
	<item
		android:id="@+id/menu_delete" 
		android:title="@string/delete"
	/>
    <item
        android:id="@+id/menu_view_profile" 
        android:title="@string/view_xbl_profile"
    />
</menu>
