<?xml version="1.0" encoding="utf-8"?>
<!--  
 - menu/xbl_gamer_profile.xml
 - Copyright (C) 2010-2012 Akop Karapetyan
 -
 - This file is part of Spark 360, the online gaming service client. 
 -
 -  This program is free software; you can redistribute it and/or modify
 -  it under the terms of the GNU General Public License as published by
 -  the Free Software Foundation; either version 2 of the License, or
 -  (at your option) any later version.
 -
 -  This program is distributed in the hope that it will be useful,
 -  but WITHOUT ANY WARRANTY; without even the implied warranty of
 -  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 -  GNU General Public License for more details.
 -
 -  You should have received a copy of the GNU General Public License
 -  along with this program; if not, write to the Free Software
 -  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 -  02111-1307  USA.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/menu_group_not_friend">
		<item
			android:id="@+id/menu_add_friend" 
			android:title="@string/send_friend_request"
			android:icon="@drawable/ic_menu_invite"
		/>
	</group>
	<group android:id="@+id/menu_group_is_friend">
		<item
			android:id="@+id/menu_remove_friend" 
			android:title="@string/remove_from_friends"
			android:icon="@drawable/ic_menu_uninvite"
		/>
	</group>
	<group android:id="@+id/menu_group_selected">
		<item
			android:id="@+id/menu_compare_games" 
			android:title="@string/compare_games"
			android:icon="@drawable/ic_menu_compare"
		/>
	</group>
	<group android:id="@+id/menu_group_gold">
		<item
			android:id="@+id/menu_compose" 
			android:title="@string/compose_message"
			android:icon="@drawable/ic_menu_compose"
		/>
	</group>
</menu>
