<?xml version="1.0" encoding="utf-8"?>
<!--  
 - layout/about.xml
 - Copyright (C) 2010-2014 Akop Karapetyan
 -
 - This file is part of Spark 360, the online gaming service client. 
 -
 -  This program is free software; you can redistribute it and/or modify
 -  it under the terms of the GNU General Public License as published by
 -  the Free Software Foundation; either version 2 of the License, or
 -  (at your option) any later version.
 -
 -  This program is distributed in the hope that it will be useful,
 -  but WITHOUT ANY WARRANTY; without even the implied warranty of
 -  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 -  GNU General Public License for more details.
 -
 -  You should have received a copy of the GNU General Public License
 -  along with this program; if not, write to the Free Software
 -  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 -  02111-1307  USA.
 -->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:orientation="vertical"
	>
		<TextView
			android:text="@string/app_name"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textAppearance="@style/TextAppearance.appTitle" 
			android:drawableTop="@drawable/about"
			android:drawablePadding="10dp"
		/>
		<TextView
			android:id="@+id/app_version"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textAppearance="@style/TextAppearance.primary" 
		/>
		<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textAppearance="@style/TextAppearance.primary" 
			android:text="@string/app_by"
		/>
		<TextView
			android:id="@+id/app_website"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
	        android:layout_margin="10dp"
			android:textAppearance="@style/TextAppearance.primary" 
		/>
		<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:layout_marginTop="10dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			android:textAppearance="@style/TextAppearance.secondary" 
			android:text="@string/app_ownership"
			android:gravity="center_horizontal"
		/>
	</LinearLayout>
</ScrollView>