<?xml version="1.0" encoding="utf-8"?>
<!--  
 - layout/authenticating_account_login.xml
 - Copyright (C) 2010-2012 Akop Karapetyan
 -
 - This file is part of Spark 360, the online gaming service client.
 -
 -  This program is free software; you can redistribute it and/or modify
 -  it under the terms of the GNU General Public License as published by
 -  the Free Software Foundation; either version 2 of the License, or
 -  (at your option) any later version.
 -
 -  This program is distributed in the hope that it will be useful,
 -  but WITHOUT ANY WARRANTY; without even the implied warranty of
 -  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 -  GNU General Public License for more details.
 -
 -  You should have received a copy of the GNU General Public License
 -  along with this program; if not, write to the Free Software
 -  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 -  02111-1307  USA.
 -->

<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="5dp"
	>
		<TextView 
			android:id="@+id/account_setup_login_directions"
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:textAppearance="@style/TextAppearance.cafMediumMessage" 
			android:layout_marginBottom="5dp"
		/>
		<EditText 
			android:id="@+id/account_setup_login_email" 
			android:hint="@string/email_address"
			android:inputType="textEmailAddress" 
			android:singleLine="true" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
		/>
		<EditText 
			android:id="@+id/account_setup_login_password" 
			android:hint="@string/password" 
			android:password="true" 
			android:singleLine="true" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:nextFocusDown="@+id/preferences_account_save"
		/>
	</LinearLayout>
	<View
		android:layout_width="fill_parent" 
		android:layout_height="0px" 
		android:layout_weight="1"
	/>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="56dip"
		android:background="@drawable/stock_bottom_bar"
	>
		<Button 
			android:id="@+id/account_setup_login_ok"
			android:text="@string/next"
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:minWidth="@dimen/button_minWidth" 
			android:layout_alignParentRight="true" 
			android:layout_centerVertical="true" 
		/>
	</RelativeLayout>
</LinearLayout>
