<?xml version="1.0" encoding="utf-8"?>
<!--  
 - layout/xbl_fragment_edit_profile.xml
 - Copyright (C) 2010-2012 Akop Karapetyan
 -
 - This file is part of Spark 360, the online gaming service client. 
 -
 -  This program is free software; you can redistribute it and/or modify
 -  it under the terms of the GNU General Public License as published by
 -  the Free Software Foundation; either version 2 of the License, or
 -  (at your option) any later version.
 -
 -  This program is distributed in the hope that it will be useful,
 -  but WITHOUT ANY WARRANTY; without even the implied warranty of
 -  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 -  GNU General Public License for more details.
 -
 -  You should have received a copy of the GNU General Public License
 -  along with this program; if not, write to the Free Software
 -  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 -  02111-1307  USA.
 -->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="@color/background"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:orientation="vertical"
    >
        <TextView 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content" 
            android:textAppearance="@style/TextAppearance.cafMediumMessage" 
            android:layout_marginBottom="5dp"
            android:text="@string/motto"
        />
        <EditText 
            android:id="@+id/profile_motto" 
            android:hint="@string/motto"
            android:inputType="textAutoCorrect|textAutoComplete" 
            android:singleLine="true" 
            android:maxLength="21" 
            android:layout_height="wrap_content" 
            android:layout_width="fill_parent"
        />
       <TextView 
           android:layout_height="wrap_content" 
           android:layout_width="wrap_content" 
           android:textAppearance="@style/TextAppearance.cafMediumMessage" 
           android:layout_marginBottom="5dp"
           android:text="@string/name"
       />
       <EditText 
           android:id="@+id/profile_name" 
           android:hint="@string/name"
           android:inputType="textPersonName" 
           android:singleLine="true" 
           android:maxLength="129" 
           android:layout_height="wrap_content" 
           android:layout_width="fill_parent"
       />
       <TextView 
           android:layout_height="wrap_content" 
           android:layout_width="wrap_content" 
           android:textAppearance="@style/TextAppearance.cafMediumMessage" 
           android:layout_marginBottom="5dp"
           android:text="@string/location"
       />
       <EditText 
           android:id="@+id/profile_location" 
           android:hint="@string/location"
           android:inputType="textAutoCorrect|textAutoComplete" 
           android:singleLine="true" 
           android:maxLength="40"
           android:layout_height="wrap_content" 
           android:layout_width="fill_parent"
       />
       <TextView 
           android:layout_height="wrap_content" 
           android:layout_width="wrap_content" 
           android:textAppearance="@style/TextAppearance.cafMediumMessage" 
           android:layout_marginBottom="5dp"
           android:text="@string/bio"
       />
       <EditText 
           android:id="@+id/profile_bio" 
           android:hint="@string/bio"
           android:inputType="textAutoCorrect|textAutoComplete|textMultiLine" 
           android:minLines="2"
           android:maxLines="4"
           android:gravity="left|top"
           android:maxLength="499"
           android:layout_height="wrap_content" 
           android:layout_width="fill_parent"
       />
    </LinearLayout> 
</ScrollView>
