<?xml version="1.0" encoding="utf-8"?>
<!--  
 - layout/xbl_message_compose.xml
 - Copyright (C) 2010-2012 Akop Karapetyan
 -
 - This file is part of Spark 360, the online gaming service client. 
 -
 -  This program is free software; you can redistribute it and/or modify
 -  it under the terms of the GNU General Public License as published by
 -  the Free Software Foundation; either version 2 of the License, or
 -  (at your option) any later version.
 -
 -  This program is distributed in the hope that it will be useful,
 -  but WITHOUT ANY WARRANTY; without even the implied warranty of
 -  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 -  GNU General Public License for more details.
 -
 -  You should have received a copy of the GNU General Public License
 -  along with this program; if not, write to the Free Software
 -  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 -  02111-1307  USA.
 -->

<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	style="@style/roundedPaneOuter"
>
    <include layout="@layout/xbl_ribbon_title" />
    
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"
		style="@style/roundedPaneInner"
	>
		<FrameLayout
			android:id="@+id/button_section"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:background="@drawable/xbox_ribbon_bg2"
		>
			<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="5dp"
				android:background="@drawable/xbox_window_bottom"
			>
				<Button 
					android:id="@+id/message_compose_send"
					android:text="@string/send"
					android:layout_height="wrap_content" 
					android:layout_width="wrap_content"
					android:minWidth="@dimen/button_minWidth" 
					android:layout_alignParentLeft="true" 
				/>
				<Button 
					android:id="@+id/message_compose_discard"
					android:text="@android:string/cancel"
					android:layout_height="wrap_content" 
					android:layout_width="wrap_content"
					android:minWidth="@dimen/button_minWidth" 
					android:layout_alignParentRight="true" 
				/>
			</RelativeLayout>
		</FrameLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:orientation="vertical"
			android:layout_alignParentTop="true"
			android:layout_above="@id/button_section"
			android:background="@drawable/xbox_circles_bg"
	    >
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginBottom="10dp"
			>
				<TextView 
					android:id="@+id/message_compose_recipients"
					android:layout_width="0px"
					android:layout_height="wrap_content"
					android:layout_weight="1" 
					android:maxLines="2"
					android:ellipsize="end"
					android:textAppearance="@style/TextAppearance.messageSelect"
					android:gravity="left|top"
					android:text="@string/select_recipients"
				/>
				<Button 
					android:id="@+id/message_compose_select" 
					android:text="@string/ellipsis" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
				/>
			</LinearLayout>
			<EditText 
				android:id="@+id/message_compose_body" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|top"
				android:minLines="3"
				android:maxLines="7"
				android:hint="@string/compose_message"
				android:maxLength="250"
		        android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
			/>
			<TextView 
				android:id="@+id/message_warning"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.messageWarning"
				android:gravity="left|top"
				android:text="@string/message_warning"
			/>
	    </LinearLayout>
	</RelativeLayout>
</LinearLayout>